<refactor>:add apptemplate; sql changed, config changed for temp build
