# src/controller/apptemplate/arg.go
@@ -1,0 +1,5 @@
+package apptemplate
+
+type Option struct {
+	Status int
+}
