# src/controller/apptemplate/model.go
@@ -1,0 +1,10 @@
+package apptemplate
+
+import (
+	"github.com/goharbor/harbor/src/pkg/apptemplate"
+)
+
+// Overview of appTemplate
+type AppTemplate struct {
+	apptemplate.AppTemplate
+}
